<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>fr.perrier</groupId>
        <artifactId>NextDungeon</artifactId>
        <version>1.0.4-SNAPSHOT</version>
    </parent>
    <artifactId>NextDungeon-Spigot</artifactId>
    <packaging>jar</packaging>

    <name>NextDungeon Spigot</name>

    <licenses>
        <license>
            <name>The MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <!--suppress UnresolvedMavenProperty -->
                            <finalName>${project.artifactId}-${project.version}-${git.commit.id.abbrev}</finalName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>9.0.2</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
                <configuration>
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>

        <repository>
            <id>CupCodeMaven</id>
            <name>CupCodeAPI</name>
            <url>https://maven.pkg.github.com/CodeAndCup/CupCodeAPI</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>

        <!-- Parties API -->
        <repository>
            <id>alessiodp-repo</id>
            <url>https://repo.alessiodp.com/releases/</url>
        </repository>

        <!-- CloudNet API -->
        <repository>
            <id>cloudnet-releases</id>
            <url>https://repo.cloudnetservice.eu/releases/</url>
        </repository>
        <repository>
            <id>cloudnet-snapshots</id>
            <url>https://repo.cloudnetservice.eu/snapshots/</url>
        </repository>

        <!-- MMOCore API (this is shit) -->
        <repository>
            <id>phoenix</id>
            <url>https://nexus.phoenixdevt.fr/repository/maven-public/</url>
        </repository>

        <!-- MythicMobs API -->
        <repository>
            <id>nexus</id>
            <name>Lumine Releases</name>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>

        <!-- PacketEvent -->
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>

        <!-- SimpleCloud -->
        <repository>
            <id>simplecloud</id>
            <url>https://repo.simplecloud.app/snapshots</url>
        </repository>
        <repository>
            <id>bufbuild</id>
            <url>https://buf.build/gen/maven</url>
        </repository>
    </repositories>

    <dependencies>

        <!-- CupCode API-->
        <dependency>
            <groupId>fr.perrier</groupId>
            <artifactId>cupcodeapi</artifactId>
            <version>1.21.3-v1.1.6</version>
        </dependency>

        <!-- Spigot API -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Easy Code -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>

        <!-- Any version compatibility -->
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>13.6.0</version>
        </dependency>

        <!-- Parties API -->
        <dependency>
            <groupId>com.alessiodp.parties</groupId>
            <artifactId>parties-api</artifactId>
            <version>3.2.16</version>
            <scope>provided</scope>
        </dependency>

        <!-- MMOCore API -->
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>MythicLib-dist</artifactId>
            <version>1.6.2-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.Indyuce</groupId>
            <artifactId>MMOCore-API</artifactId>
            <version>1.12.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- MythicMobs API -->
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>Mythic-Dist</artifactId>
            <version>5.9.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- WorldEdit API -->
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.4.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- PacketEvents -->
        <dependency>
            <groupId>com.github.retrooper</groupId>
            <artifactId>packetevents-spigot</artifactId>
            <version>2.9.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- NPC API -->
        <dependency>
            <groupId>io.github.juliarn</groupId>
            <artifactId>npc-lib-bukkit</artifactId>
            <version>3.0.0-beta.16</version>
            <scope>compile</scope>
        </dependency>


        <!-- CloudNet API -->
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>bridge-api</artifactId>
            <version>4.0.0-RC13</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>driver-api</artifactId>
            <version>4.0.0-RC13</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>eu.cloudnetservice.cloudnet</groupId>
            <artifactId>wrapper-jvm-api</artifactId>
            <version>4.0.0-RC13</version>
            <scope>provided</scope>
        </dependency>

        <!-- SimpleCloud API -->
        <dependency>
            <groupId>app.simplecloud.api.platform</groupId>
            <artifactId>spigot</artifactId>
            <version>0.0.22-dev.1767982838988-61d2d27</version>
            <scope>provided</scope>
        </dependency>

        <!-- Persistance -->
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.12.11</version>
        </dependency>

        <!-- MySQL Connector/J -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>9.5.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- HikariCP Connection Pool -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>

        <dependency>
            <groupId>fr.perrier</groupId>
            <artifactId>NextDungeon-Common</artifactId>
            <version>1.0.4-SNAPSHOT</version>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
